# lambda_opt

./: .gitignore  README.md  pyproject.toml
examples/: criterias.py  curvature.py
src/lambda_opt/: core.py
